objects/LLC_BI__Policy_Exception_Template__c.object
<CustomObject>
    <description>The object store Policy Exception templates. The content of the object is created by an Administrator. The template defines the options that are available when a policy exception is added by a user.</description>
    <fields>
        <fullName>Board_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if policy states board approval required</description>
        <label>Board Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <description>This field is a formula field that is automatically populated depending on the Start and End dates selected for the exception template&apos;s creation. If active, this field Indicates the template may be used for new policy exceptions. To be active, the template record must have a start day of today&apos;s date or a date in the past; specify no end date if the template should be continued indefinitely, or an end date in the future.</description>
        <formula>(LLC_BI__Start_Date__c &lt;= TODAY()) &amp;&amp; (ISBLANK(LLC_BI__End_Date__c) || LLC_BI__End_Date__c &gt;= TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Code__c</fullName>
        <description>This field is configured to display all internal codes the financial instituion may have for policy exceptions. This field is a text box, and is used to specify the code associated to the policy exceptions being applied. This is an optional field to help financial institutions with reporting and tracking policy exceptions.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is a free form text box. It is optional and is used to specify the description of the policy exception template.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__End_Date__c</fullName>
        <description>This field is optional and is used to specify the last date on which the template may be used. This field helps drive the behavior for the &quot;Active&quot; field.  After this date the template will no longer be considered as active and the user cannot create a new policy exception using the template. If the end date is not specified the policy exception template will be considered active as long as it has a valid start date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Severities__c</fullName>
        <description>This field is optional and is used to specify the available severity selections a user can make when applying this policy exception. This is a multiselect picklist and allows the admin to control how many and which severities can be applied. The picklist can be edited to include all severities pertinent to the financial institution&apos;s business practices.</description>
        <label>Severities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>This field is required and is used to specify the start date of the existing policy exception templates.  Setting when the template will become &quot;active&quot; and can be used.. Before this date the template will be considered as inactive and the user cannot create a new policy exception using the template.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is required and drives the filtering functionality for the user when they are applying policy exceptions. It specifies the type of the policy exception the user is applying. This is a picklist and the options can be edited to include all policy exception types pertinent to the financial institution&apos;s business practices.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collateral</fullName>
                </value>
                <value>
                    <fullName>Covenant</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Policy</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This field is used as an external, unique key for the policy exception template record. This value is not generally made visible to the user as it is usually used behind the scenes in data mapping exercises.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Policy Exception Template</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Board_Reportable__c</columns>
        <columns>LLC_BI__Type__c</columns>
        <columns>LLC_BI__Severities__c</columns>
        <columns>LLC_BI__Start_Date__c</columns>
        <columns>LLC_BI__End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Type__c</columns>
        <columns>LLC_BI__Active__c</columns>
        <columns>LLC_BI__Description__c</columns>
        <columns>LLC_BI__Severities__c</columns>
        <columns>Board_Reportable__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Exception Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Exception Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>